--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "jsonwebtoken": "^9.0.2",
+    "axios": "^1.6.0",
     "bcryptjs": "^2.4.3",
     "better-sqlite3": "^9.2.2",
-    "axios": "^1.6.0",
-    "dotenv": "^16.3.1"
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "node-cron": "^4.2.1"
   }
 }
