--- a/server/.env.example
+++ b/server/.env.example
@@ -19,4 +19,4 @@ DEEPSEEK_API_URL=https://api.deepseek.com/v1/chat/completions
 
 
 # 前端所需的API基础路径
-BASE_URL=http://192.144.253.40:3000/api
+# BASE_URL=http://192.144.253.40:3000/api
