--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   spanish-verb-api:
     build:
-      context: ..
+      context: .
       dockerfile: server/Dockerfile
     container_name: spanish-verb-api
     restart: unless-stopped
@@ -20,7 +20,7 @@ services:
       - DEEPSEEK_API_URL=${DEEPSEEK_API_URL:-https://api.deepseek.com/v1/chat/completions}
     volumes:
       # 直接挂载本地目录，方便开发和数据访问
-      - ./:/app/server
+      - ./server:/app/server
     networks:
       - spanish-verb-network
     healthcheck:
