--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       - DEEPSEEK_API_URL=${DEEPSEEK_API_URL:-https://api.deepseek.com/v1/chat/completions}
     volumes:
       # 挂载data文件夹以持久化数据库和用户数据
-      - ../data:/app/server/data
+      - ./data:/app/server/data
     networks:
       - spanish-verb-network
     healthcheck:
