Fix admin login/logout endpoints

--- a/server/.env.example
+++ b/server/.env.example
@@ -10,6 +10,9 @@ ADMIN_WEB_ORIGIN=http://localhost:3001
 INITIAL_ADMIN_EMAIL=admin@example.com
 INITIAL_ADMIN_PASSWORD=ChangeMe123!
 INITIAL_ADMIN_USERNAME=superadmin
+DEV_USER_EMAIL=dev@example.com
+DEV_USER_PASSWORD=ChangeMeDev123!
+DEV_USER_NAME=devops
 
 # 可选：邮件与第三方服务
 EMAIL_HOST=smtp.qq.com
