(fix)第一次成功运行在小程序模拟器上

--- a/manifest.json
+++ b/manifest.json
@@ -65,9 +65,13 @@
     },
     "quickapp" : {},
     "mp-weixin" : {
-        "appid" : "",
+        "appid" : "wx500e4d0d41d0e5b1",
         "setting" : {
-            "urlCheck" : false
+            "urlCheck" : false,
+            "es6" : true,
+            "enhance" : false,
+            "postcss" : false,
+            "minified" : false
         },
         "usingComponents" : true
     },
