--- a/server/.env.example
+++ b/server/.env.example
@@ -1,27 +1,41 @@
-# 应用基础配置
+# 服务器配置
 PORT=3000
 JWT_SECRET=change-this-secret-in-production
-ADMIN_JWT_SECRET=change-admin-secret
-ADMIN_JWT_EXPIRES_IN=1d
 
-# 可观测性（Grafana）
+# 邮箱配置（用于发送验证码）
+# 以QQ邮箱为例，其他邮箱服务商请参考相应文档
+EMAIL_HOST=smtp.qq.com
+EMAIL_PORT=587
+EMAIL_USER=your-email@qq.com
+# 注意：这里填写的是授权码，不是邮箱密码
+# QQ邮箱授权码获取方式：邮箱设置 -> 账户 -> POP3/IMAP/SMTP服务 -> 生成授权码
+EMAIL_PASS=your-email-auth-code
+
+# DeepSeek API配置（用于AI生成题目）
+DEEPSEEK_API_KEY=your-deepseek-api-key
+DEEPSEEK_API_URL=https://api.deepseek.com/v1/chat/completions
+
+# 前端所需的API基础路径（部署时修改为实际服务器地址）
+BASE_URL=http://localhost:3000/api
+
+# Grafana管理员账号配置（可观测性面板）
 GRAFANA_ADMIN_USER=admin
-GRAFANA_ADMIN_PASSWORD=admin
+GRAFANA_ADMIN_PASSWORD=change-grafana-password
 
-# 管理端访问
+# 管理后台配置
 ADMIN_API_BASE_URL=http://localhost:3000
 ADMIN_WEB_ORIGIN=http://localhost:3001
+# 管理员JWT签名密钥（建议生产环境单独设置，与用户JWT_SECRET区分）
+ADMIN_JWT_SECRET=change-admin-secret
+# 管理员令牌有效期（如 1d=1天, 7d=7天, 2h=2小时）
+ADMIN_JWT_EXPIRES_IN=1d
+
+# 初始管理员账号（首次启动时自动创建）
 INITIAL_ADMIN_EMAIL=admin@example.com
 INITIAL_ADMIN_PASSWORD=ChangeMe123!
 INITIAL_ADMIN_USERNAME=superadmin
+
+# 开发者账号（拥有更高权限，可查看日志、反馈等）
 DEV_USER_EMAIL=dev@example.com
 DEV_USER_PASSWORD=ChangeMeDev123!
 DEV_USER_NAME=devops
-
-# 可选：邮件与第三方服务
-EMAIL_HOST=smtp.qq.com
-EMAIL_PORT=587
-EMAIL_USER=
-EMAIL_PASS=
-DEEPSEEK_API_KEY=
-DEEPSEEK_API_URL=https://api.deepseek.com/v1/chat/completions
