--- a/server/.env.example
+++ b/server/.env.example
@@ -39,3 +39,7 @@ INITIAL_ADMIN_USERNAME=superadmin
 DEV_USER_EMAIL=dev@example.com
 DEV_USER_PASSWORD=ChangeMeDev123!
 DEV_USER_NAME=devops
+
+# 其他配置
+DASHSCOPE_API_KEY=
+QWEN_MODEL=qwen-plus   # 或者 qwen-max / qwen-max-latest 之类，随你
