(fix)成功改写为小程序端代码并成功运行至模拟器

--- a/manifest.json
+++ b/manifest.json
@@ -71,9 +71,13 @@
             "es6" : true,
             "enhance" : false,
             "postcss" : false,
-            "minified" : false
+            "minified" : false,
+            "minifyWXML" : false
         },
-        "usingComponents" : true
+        "usingComponents" : true,
+        "optimization" : {
+            "subPackages" : true
+        }
     },
     "h5" : {
         "devServer" : {
