(opt)新增了第二版prompt

--- a/scripts/.env.example
+++ b/scripts/.env.example
@@ -32,7 +32,13 @@ OUTPUT_FILE=
 
 # 日志输出到文件（不设置则只打印到终端）
 LOG_FILE=
+ 
+# 生成最大 tokens（单值，默认 1000）
+GENERATOR_MAX_TOKENS=1000 
+VALIDATOR_MAX_TOKENS=700 
 
+# 请求超时时间（毫秒）
+REQUEST_TIMEOUT_MS=45000 
 # ===== get_verb.py（动词变位生成）=====
 # Qwen 模型
 VERB_GENERATEION_MODEL=qwen-plus
