(config)取消version.json、announcement.json和apk文件的git追踪，加入.gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,8 @@ coverage/
 server/data/backups/
 server/data/backup_records.json
 server/data/import_records.json
+
+# 版本和公告配置文件（不追踪以便本地配置）
+server/src/version.json
+server/src/announcement.json
+server/src/updates/*.apk
