(opt)优化了题目生成的逻辑（未落实到实际后端）

--- a/scripts/.env.example
+++ b/scripts/.env.example
@@ -20,9 +20,12 @@ USE_VALIDATOR=true
 # prompt 版本（逗号分隔，index 从 0 开始）
 GENERATOR_PROMPTS=0
 VALIDATOR_PROMPTS=0
+REVISOR_PROMPTS=0
 
 # validator 模型温度（单值，默认沿用生成温度）
 VALIDATOR_TEMPERATURE=
+# revisor 模型温度（单值，推荐 0.4）
+REVISOR_TEMPERATURE=0.4
 
 # 跑测试的次数（每次随机一个动词+一个时态+一个人称）
 TEST_CASES=1
@@ -36,6 +39,10 @@ LOG_FILE=
 # 生成最大 tokens（单值，默认 1000）
 GENERATOR_MAX_TOKENS=1000 
 VALIDATOR_MAX_TOKENS=700 
+REVISOR_MAX_TOKENS=500
+
+# 是否启用 revisor（true/false）
+USE_REVISOR=true
 
 # 请求超时时间（毫秒）
 REQUEST_TIMEOUT_MS=45000 
