(feat)新出题逻辑部署

--- a/server/.env.example
+++ b/server/.env.example
@@ -11,9 +11,6 @@ EMAIL_USER=your-email@qq.com
 # QQ邮箱授权码获取方式：邮箱设置 -> 账户 -> POP3/IMAP/SMTP服务 -> 生成授权码
 EMAIL_PASS=your-email-auth-code
 
-# DeepSeek API配置（用于AI生成题目）
-DEEPSEEK_API_KEY=your-deepseek-api-key
-DEEPSEEK_API_URL=https://api.deepseek.com/v1/chat/completions
 
 # Grafana管理员账号配置（可观测性面板）
 GRAFANA_ADMIN_USER=admin
@@ -37,6 +34,23 @@ DEV_USER_EMAIL=dev@example.com
 DEV_USER_PASSWORD=ChangeMeDev123!
 DEV_USER_NAME=devops
 
-# 其他配置
-DASHSCOPE_API_KEY=
-QWEN_MODEL=qwen-plus   # 或者 qwen-max / qwen-max-latest 之类，随你
+# 出题模型配置（generator/validator/revisor 共用）
+EXERCISE_GENERATOR_PROVIDER=deepseek
+EXERCISE_GENERATOR_API_KEY=
+EXERCISE_GENERATOR_API_URL=https://api.deepseek.com/v1/chat/completions
+EXERCISE_GENERATOR_MODEL=deepseek-chat
+EXERCISE_GENERATOR_TIMEOUT_MS=45000
+
+# 采样参数
+EXERCISE_GENERATOR_GENERATOR_MAX_TOKENS=1500
+EXERCISE_GENERATOR_VALIDATOR_MAX_TOKENS=1500
+EXERCISE_GENERATOR_REVISOR_MAX_TOKENS=3000
+EXERCISE_GENERATOR_GENERATOR_TEMPERATURE=0.7
+EXERCISE_GENERATOR_VALIDATOR_TEMPERATURE=0.5
+EXERCISE_GENERATOR_REVISOR_TEMPERATURE=0.4
+
+# 若要用 qwen，请改为：
+# EXERCISE_GENERATOR_PROVIDER=qwen
+# EXERCISE_GENERATOR_API_URL=https://dashscope.aliyuncs.com/compatible-mode/v1/chat/completions
+# EXERCISE_GENERATOR_MODEL=qwen-plus
+# EXERCISE_GENERATOR_API_KEY=<你的DashScope兼容API key>
