--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -18,8 +18,17 @@ services:
       - EMAIL_PORT=${EMAIL_PORT:-587}
       - EMAIL_USER=${EMAIL_USER}
       - EMAIL_PASS=${EMAIL_PASS}
-      - DEEPSEEK_API_KEY=${DEEPSEEK_API_KEY}
-      - DEEPSEEK_API_URL=${DEEPSEEK_API_URL:-https://api.deepseek.com/v1/chat/completions}
+      - EXERCISE_GENERATOR_PROVIDER=${EXERCISE_GENERATOR_PROVIDER:-deepseek}
+      - EXERCISE_GENERATOR_API_KEY=${EXERCISE_GENERATOR_API_KEY}
+      - EXERCISE_GENERATOR_API_URL=${EXERCISE_GENERATOR_API_URL:-https://api.deepseek.com/v1/chat/completions}
+      - EXERCISE_GENERATOR_MODEL=${EXERCISE_GENERATOR_MODEL:-deepseek-chat}
+      - EXERCISE_GENERATOR_TIMEOUT_MS=${EXERCISE_GENERATOR_TIMEOUT_MS:-45000}
+      - EXERCISE_GENERATOR_GENERATOR_MAX_TOKENS=${EXERCISE_GENERATOR_GENERATOR_MAX_TOKENS:-1000}
+      - EXERCISE_GENERATOR_VALIDATOR_MAX_TOKENS=${EXERCISE_GENERATOR_VALIDATOR_MAX_TOKENS:-700}
+      - EXERCISE_GENERATOR_REVISOR_MAX_TOKENS=${EXERCISE_GENERATOR_REVISOR_MAX_TOKENS:-500}
+      - EXERCISE_GENERATOR_GENERATOR_TEMPERATURE=${EXERCISE_GENERATOR_GENERATOR_TEMPERATURE:-0.7}
+      - EXERCISE_GENERATOR_VALIDATOR_TEMPERATURE=${EXERCISE_GENERATOR_VALIDATOR_TEMPERATURE:-0.3}
+      - EXERCISE_GENERATOR_REVISOR_TEMPERATURE=${EXERCISE_GENERATOR_REVISOR_TEMPERATURE:-0.4}
       - ADMIN_JWT_SECRET=${ADMIN_JWT_SECRET:-change-admin-secret}
       - ADMIN_JWT_EXPIRES_IN=${ADMIN_JWT_EXPIRES_IN:-1d}
       - INITIAL_ADMIN_EMAIL=${INITIAL_ADMIN_EMAIL}
