--- a/server/.env.example
+++ b/server/.env.example
@@ -17,8 +17,9 @@ GRAFANA_ADMIN_USER=admin
 GRAFANA_ADMIN_PASSWORD=change-grafana-password
 
 # 管理后台配置
-ADMIN_API_BASE_URL=http://localhost:3000
-ADMIN_WEB_ORIGIN=http://localhost:3001
+# 生产环境请使用 HTTPS 域名
+ADMIN_API_BASE_URL=https://conjugamos.top
+ADMIN_WEB_ORIGIN=https://conjugamos.top
 # 管理员JWT签名密钥（建议生产环境单独设置，与用户JWT_SECRET区分）
 ADMIN_JWT_SECRET=change-admin-secret
 # 管理员令牌有效期（如 1d=1天, 7d=7天, 2h=2小时）
