--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -1,12 +1,34 @@
 services:
+  nginx:
+    image: nginx:alpine
+    container_name: spanish-verb-nginx
+    restart: unless-stopped
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./certs:/etc/nginx/certs:ro
+    depends_on:
+      - spanish-verb-api
+      - admin-web
+    networks:
+      - spanish-verb-network
+    healthcheck:
+      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost/health"]
+      interval: 30s
+      timeout: 3s
+      retries: 3
+      start_period: 10s
+
   spanish-verb-api:
     build:
       context: ..
       dockerfile: server/Dockerfile
     container_name: spanish-verb-api
     restart: unless-stopped
-    ports:
-      - "3000:3000"
+    expose:
+      - "3000"
     env_file:
       - .env
     environment:
@@ -53,13 +75,13 @@ services:
       context: ../admin-web
       dockerfile: Dockerfile
       args:
-        - VUE_APP_ADMIN_API_BASE_URL=${ADMIN_API_BASE_URL:-http://localhost:3000}
+        - VUE_APP_ADMIN_API_BASE_URL=https://conjugamos.top
     env_file:
       - .env
-    ports:
-      - "3001:80"
+    expose:
+      - "80"
     environment:
-      - VUE_APP_ADMIN_API_BASE_URL=${ADMIN_API_BASE_URL:-http://localhost:3000}
+      - VUE_APP_ADMIN_API_BASE_URL=https://conjugamos.top
     networks:
       - spanish-verb-network
 
