--- a/admin-web/Dockerfile
+++ b/admin-web/Dockerfile
@@ -1,4 +1,5 @@
-FROM node:18-alpine AS builder
+FROM alpine:3.19 AS builder
+RUN apk add --no-cache nodejs npm
 WORKDIR /app
 COPY package.json package-lock.json* ./
 RUN npm install
@@ -7,8 +8,10 @@ ARG VUE_APP_ADMIN_API_BASE_URL
 ENV VUE_APP_ADMIN_API_BASE_URL=${VUE_APP_ADMIN_API_BASE_URL}
 RUN npm run build
 
-FROM nginx:alpine
+FROM alpine:3.19
+RUN apk add --no-cache nginx
+RUN mkdir -p /run/nginx
 COPY --from=builder /app/dist /usr/share/nginx/html
-COPY nginx.conf /etc/nginx/conf.d/default.conf
+COPY nginx.conf /etc/nginx/http.d/default.conf
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
