--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -1,13 +1,15 @@
 services:
   nginx:
-    image: nginx:alpine
+    build:
+      context: .
+      dockerfile: nginx.Dockerfile
     container_name: spanish-verb-nginx
     restart: unless-stopped
     ports:
       - "80:80"
       - "443:443"
     volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./nginx.conf:/etc/nginx/http.d/default.conf:ro
       - ./certs:/etc/nginx/certs:ro
     depends_on:
       - spanish-verb-api
