--- a/server/nginx.conf
+++ b/server/nginx.conf
@@ -4,8 +4,17 @@ server {
     listen [::]:80;
     server_name conjugamos.top;
 
-    # 重定向所有 HTTP 请求到 HTTPS
-    return 301 https://$server_name$request_uri;
+    # 健康检查端点（不重定向）
+    location /health {
+        access_log off;
+        return 200 "healthy\n";
+        add_header Content-Type text/plain;
+    }
+
+    # 重定向所有其他 HTTP 请求到 HTTPS
+    location / {
+        return 301 https://$server_name$request_uri;
+    }
 }
 
 # HTTPS 服务器
@@ -22,7 +31,6 @@ server {
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_ciphers 'ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384';
     ssl_prefer_server_ciphers off;
-    ssl_session_cache shared:SSL:10m;
     ssl_session_timeout 10m;
 
     # 安全头部
