--- a/server/nginx.conf
+++ b/server/nginx.conf
@@ -81,9 +81,10 @@ server {
         proxy_read_timeout 60s;
     }
 
-    # 管理前端界面 - /admin
-    location /admin {
-        proxy_pass http://admin-web:80;
+    # 管理前端界面 - /admin 和所有子路径
+    location /admin/ {
+        # 注意尾部斜杠会去掉 /admin 前缀
+        proxy_pass http://admin-web:80/;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -92,6 +93,11 @@ server {
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
         proxy_cache_bypass $http_upgrade;
+    }
+    
+    location = /admin {
+        # 重定向到带斜杠的路径
+        return 301 $scheme://$host/admin/;
     }
 
     # 健康检查
