--- a/server/.env.example
+++ b/server/.env.example
@@ -17,8 +17,8 @@ GRAFANA_ADMIN_USER=admin
 GRAFANA_ADMIN_PASSWORD=change-grafana-password
 
 # 管理后台配置
-# 生产环境请使用 HTTPS 域名
-ADMIN_API_BASE_URL=https://conjugamos.top
+# 生产环境请使用 HTTPS 域名，并指向 /admin-api 路径
+ADMIN_API_BASE_URL=https://conjugamos.top/admin-api
 ADMIN_WEB_ORIGIN=https://conjugamos.top
 # 管理员JWT签名密钥（建议生产环境单独设置，与用户JWT_SECRET区分）
 ADMIN_JWT_SECRET=change-admin-secret
