(add)带代词变位脚本实现

--- a/scripts/.env.example
+++ b/scripts/.env.example
@@ -46,6 +46,41 @@ USE_REVISOR=true
 
 # 请求超时时间（毫秒）
 REQUEST_TIMEOUT_MS=45000 
+
+# ===== prompt_conj-with-pronoun_test.js（动词+代词组合实验）=====
+# 说明：
+# - 仍复用上面的 API 配置：DEEPSEEK_* / QWEN_*。
+# - 下列未设置时，部分参数会回退到通用参数：
+#   CONJ_WITH_PRONOUN_*_PROMPTS -> GENERATOR_PROMPTS / VALIDATOR_PROMPTS / REVISOR_PROMPTS
+#   CONJ_WITH_PRONOUN_*_MAX_TOKENS -> GENERATOR_MAX_TOKENS / VALIDATOR_MAX_TOKENS / REVISOR_MAX_TOKENS
+#   CONJ_WITH_PRONOUN_VALIDATOR_TEMPERATURE -> VALIDATOR_TEMPERATURE
+#   CONJ_WITH_PRONOUN_REVISOR_TEMPERATURE -> REVISOR_TEMPERATURE
+# - TEST_CASES / MODELS / GENERATOR_TEMPERATURES / USE_VALIDATOR / USE_REVISOR 直接复用通用参数。
+
+# prompt 版本（逗号分隔，index 从 0 开始；当前三个文件默认只有 0）
+CONJ_WITH_PRONOUN_GENERATOR_PROMPTS=0
+CONJ_WITH_PRONOUN_VALIDATOR_PROMPTS=0
+CONJ_WITH_PRONOUN_REVISOR_PROMPTS=0
+
+# host_form 候选（逗号分隔，可选：finite,imperative,infinitive,gerund,prnl）
+CONJ_WITH_PRONOUN_HOST_FORMS=finite,imperative,infinitive,gerund,prnl
+
+# finite 时态候选（逗号分隔，可选：present,preterite,imperfect）
+CONJ_WITH_PRONOUN_FINITE_TENSES=present,preterite,imperfect
+
+# validator/revisor 温度（单值，不设则按上面的回退规则）
+CONJ_WITH_PRONOUN_VALIDATOR_TEMPERATURE=
+CONJ_WITH_PRONOUN_REVISOR_TEMPERATURE=
+
+# 生成最大 tokens（单值，不设则按上面的回退规则）
+CONJ_WITH_PRONOUN_GENERATOR_MAX_TOKENS=1300
+CONJ_WITH_PRONOUN_VALIDATOR_MAX_TOKENS=900
+CONJ_WITH_PRONOUN_REVISOR_MAX_TOKENS=700
+
+# 输出路径（建议使用 scripts/output 下文件）
+CONJ_WITH_PRONOUN_OUTPUT_FILE=./output/prompt_conj-with-pronoun.csv
+CONJ_WITH_PRONOUN_LOG_FILE=./output/prompt_conj-with-pronoun_logs.csv
+
 # ===== get_verb.py（动词变位生成）=====
 # Qwen 模型
 VERB_GENERATEION_MODEL=qwen-plus
